src/test/ui/const-generics/issues/issue-90318.stderr
error[E0277]: can't compare `TypeId` with `TypeId`
  --> $DIR/issue-90318.rs:14:28
   |
LL |     If<{ TypeId::of::<T>() != TypeId::of::<()>() }>: True,
   |                            ^^ no implementation for `TypeId == TypeId`
   |
   = help: the trait `PartialEq` is not implemented for `TypeId`
help: consider extending the `where` bound, but there might be an alternative better way to express this requirement
   |
LL |     If<{ TypeId::of::<T>() != TypeId::of::<()>() }>: True, TypeId: PartialEq
   |                                                          ~~~~~~~~~~~~~~~~~~~

error[E0277]: can't compare `TypeId` with `TypeId`
  --> $DIR/issue-90318.rs:21:28
   |
LL |     If<{ TypeId::of::<T>() != TypeId::of::<()>() }>: True,
   |                            ^^ no implementation for `TypeId == TypeId`
   |
   = help: the trait `PartialEq` is not implemented for `TypeId`
help: consider extending the `where` bound, but there might be an alternative better way to express this requirement
   |
LL |     If<{ TypeId::of::<T>() != TypeId::of::<()>() }>: True, TypeId: PartialEq
   |                                                          ~~~~~~~~~~~~~~~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
